<resources>
    <string name="app_name">Poyechali scanner</string>
    <string name="current_bus" translatable="false">no bus</string>
    <string name="serverurl" translatable="false">http://paiechaleserver.pythonanywhere.com/</string>
    <string name="Home_screen_text">Home Screen</string>
    <string name="start_scan_text">Start scan</string>
    <string name="open_bus_text">Open vehicle</string>
    <string name="add_bus_text">"Add vehicle "</string>
    <string name="settings_text">Settings</string>
    <string name="False_text">F</string>
    <string name="stampanywaytext">Stamp anyway</string>
    <string name="closebustext">Close bus</string>
    <string name="busidtext">Vehicle id</string>
    <string name="licenceplatetext">Licence plate</string>
    <string name="driversnametext">Driver name</string>
    <string name="bustext">Bus</string>
    <string name="minibustext">Mini bus</string>
    <string name="privatcartext">Privet car</string>
    <string name="addbustext">Add bus</string>
    <string name="numberofseatstext">number of seats</string>
    <string name="cartypetext">Car type</string>
    <string name="savetext">Save</string>
    <string name="logintext">Log in</string>
    <string name="nametext">Name</string>
    <string name="passwordtext">Password</string>
    <string name="loginheder">Wellcom !\npleas enter your name and password</string>
    <string name="checking_ticket_text">checking ticket</string>
    <string name="truetext">successful</string>
    <string name="falsetext">faild</string>
    <string name="workeridtext">worker id</string>
    <string name="waytext">way</string>
    <string name="halochtext">haloch</string>
    <string name="hazortext">hazor</string>
    <string name="logouttext">logout</string>
    <string name="currentbustext">current vehicle</string>
    <string name="mozatext">moza</string>
    <string name="yadtext">yad</string>
    <string name="saveansscanetext">save and scan</string>
    <string name="messageticketinbus">tha ticket your trying to stamp is allyedy stampd in this bus\\nwuld you like to remove it?</string>
    <string name="yestext">Yes</string>
    <string name="notext">No</string>
    <string name="messagebarcodeisnotticket">qr is not a ticket</string>
    <string name="goodtext">good</string>
    <string name="faildnobustext">faild no vehicle</string>
    <string name="wellcommessage">Wellcom to POYECALI app</string>
    <string name="chekingconnectiontext">checking connection</string>
    <string name="scanebustext">Scan bus</string>
    <string name="openbus_choosemoza">Set moza</string>
    <string name="homescreen_hedertext">Good morninng \"usaname\"</string>
    <string name="homescreen_explanemesssage">To start scanning select a vehicle from the list</string>
    <string name="homescreen_novieaclsemessage">No vehicles yet \nAdd one using the button</string>
    <string name="openbus_setbusid"><u>Scan or enter the bus code</u></string>
    <string name="openbus_setmoza">Select the outlet</string>
    <string name="openbus_setyad">Select the destination</string>
    <string name="homescreen_saveandscane">Scan</string>
    <string name="closepopup_heder">Do you have any comments?</string>
    <string name="closepopup_hint">comments...</string>
    <string name="closepopup_cancle">Cancel</string>
    <string name="seats_text">seats</string>
    <string name="enter_tz">Enter passenger id</string>
    <string name="navigator_open_viecalse">open vehicles</string>
    <string name="navigator_print_by_tz">print by tz</string>
    <string name="qr_bytz_hint">id number</string>
    <string name="Faild_text">Faild</string>
    <string name="no_car_text">The vehicle does not exist in the system</string>
    <string name="wellcomtext">Wellcom</string>
    <string name="eror_text_no_ticket">The card does not exist on the system</string>
    <string name="eror_text_ticket_used">ticket was used</string>
    <string name="eror_text_car_no_fit">The ticket fits the replace1 not the replace2</string>
    <string name="addanonimosq">How would you like to add the passenger?</string>
    <string name="enjoytriptext">Enjoy your trip</string>
    <string name="mozadontfit">Invalid travel ticket at change1 location</string>
    <string name="eror_text_car_dont_fit">The card is not suitable for change1</string>
    <string name="by_id_number">With id number</string>
    <string name="by_anonimusli">Anonymously</string>

</resources>
